# templay

./: LICENSE  README.md
.devcontainer/: devcontainer.json
templay/: .taurignore  package.json
templay/src/: App.svelte  main.ts
templay/src-tauri/: Cargo.toml  config.toml.example  tauri.conf.json
templay/src-tauri/src/: executor.rs  external_editor.rs  main.rs
templay/src-tauri/src/config/: config.rs
templay/src/lib/components/: AboutDialog.svelte  CopyButton.svelte  Editor.svelte  Greet.svelte  LaunchExternalEditorButton.svelte  Selector.svelte  SettingsDialog.svelte  TemplateSelector.svelte
templay/src/lib/pages/: About.svelte  Settings.svelte
templay/src/lib/types/: SettingsData.ts
templay/src/types/: Config.ts  TemplateObject.ts
